<resources>
    <string name="app_name">hypergenericlistforbuyingstuff</string>
    <string name="acessar">Acessar</string>
    <string name="criar_conta">Criar Conta</string>
    <string name="esqueci_minha_senha">Esqueci minha senha</string>
    <string name="senha">Senha</string>
    <string name="email">Email</string>
    <string name="lista_de_compras">Lista de Compras</string>
    <string name="nome_completo">Nome Completo</string>
    <string name="entrar_com_google">Entrar com Google</string>

    <string-array name="units_array">
        <item>un</item>
        <item>kg</item>
        <item>g</item>
        <item>L</item>
        <item>ml</item>
        <item>pacote</item>
        <item>caixa</item>
    </string-array>

    <string-array name="categories_array">
        <item>Fruta</item>
        <item>Verdura</item>
        <item>Carne</item>
        <item>Laticínios</item>
        <item>Padaria</item>
        <item>Bebidas</item>
        <item>Limpeza</item>
        <item>Higiene</item>
        <item>Outros</item>
    </string-array>

</resources>